--- a/src/index.css
+++ b/src/index.css
@@ -15,11 +15,11 @@
 
 a {
   font-weight: 700;
-  color: #646cff;
+  color: #f5deb3;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #dbad58;
 }
 
 body {
@@ -58,9 +58,6 @@ button:focus-visible {
   :root {
     color: #213547;
     background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
